@@ -1,60 +1,56 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.1'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.1'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.megazone'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+    sourceCompatibility = '17'
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	
-	// ShardingSphere 추가
-	// https://mvnrepository.com/artifact/org.apache.shardingsphere/shardingsphere-jdbc-core
-	implementation group: 'org.apache.shardingsphere', name: 'shardingsphere-jdbc-core', version: '5.4.1'
-	// implementation group: 'org.apache.shardingsphere', name: 'shardingsphere-jdbc-core', version: '4.0.1'
-	
-
-	// JSP 관련 의존성 추가
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl:1.2'
-	
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
-	implementation 'com.sun.xml.bind:jaxb-impl:2.3.0.1'
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
-	
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    compileOnly 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+    
+    // ShardingSphere 추가
+    // https://mvnrepository.com/artifact/org.apache.shardingsphere/shardingsphere-jdbc-core
+    implementation group: 'org.apache.shardingsphere', name: 'shardingsphere-jdbc-core', version: '5.4.1'
+    implementation group: 'org.apache.shardingsphere', name: 'sharding-jdbc', version: '4.1.1', ext: 'pom'
+    
+    // SnakeYAML 의존성 추가
+    implementation 'org.yaml:snakeyaml:1.28' // 버전은 최신으로 변경
+    
+    // JSP 관련 의존성 추가
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    implementation 'javax.servlet:jstl:1.2'
+    
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
+    
+    implementation 'com.google.guava:guava:30.1-jre'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--add-modules=java.xml.bind"
+    useJUnitPlatform()
 }
